ustring: Add make_valid()

make_valid() replaces all non-UTF8 characters with replacement
character (U+FFFD). Allows manipulating with ustring after you find
out by ustring::validate() that it's not an UTF-8 string and you
need to rescue it somehow. This wraps g_utf8_make_valid().

https://bugzilla.gnome.org/show_bug.cgi?id=780075
See also issue #40

This commit includes part of MR !11 by Martin Ejdestig <marejde@gmail.com>,
fixing a memory leak in the original make_valid().