glib/glibmm/ustring.cc
@@ -1218,6 +1218,12 @@ ustring::validate(ustring::const_iterator& first_invalid) const
   return (is_valid != 0);
 }
 
+ustring
+ustring::make_valid() const
+{
+  return convert_return_gchar_ptr_to_ustring(g_utf8_make_valid(string_.data(), string_.size()));
+}
+
 bool
 ustring::is_ascii() const
 {
